# stp_etc_esc

./: ExposureTimeSNRCalculatorESC.py  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
docs/: ETC_Changelog.rst
notebooks/: ESC_ExposureTimeSNRCalculator_Demo.ipynb  etc_esc_requirements.py  example.ipynb  example_tool.py
src/config_project_template/: __init__.py  config_loader.py
src/config_project_template/configs/: common_params.toml
src/stp_etc_esc/: ExposureTimeSNRCalculatorESC.py  __init__.py
tests/: test_config_files.py  test_config_stp.py  test_config_stp_esc.py  test_esc_etc_initialization.py  test_version_consistency.py  test_version_consistency_esc.py  test_version_consistency_stp.py
tests/test_data/test_stp/: telescope.toml
